# trebuchet

./: .gitignore  Cargo.toml  README.md  installation.md  task.md
communication/api-gateway/: Cargo.toml
communication/api-gateway/src/: Cargo.toml  lib.rs
communication/message-bus/: Cargo.toml
communication/message-bus/src/: Cargo.toml  lib.rs
config/: trebuchet.yaml
microservices/combine/: Cargo.toml
microservices/combine/src/: Cargo.toml  lib.rs
microservices/gospel/: Cargo.toml
microservices/gospel/src/: Cargo.toml  lib.rs
microservices/heihachi/: Cargo.toml
microservices/heihachi/src/: Cargo.toml  lib.rs
microservices/lavoisier/: Cargo.toml
microservices/lavoisier/src/: Cargo.toml  lib.rs
microservices/moriarty/: Cargo.toml
microservices/moriarty/src/: Cargo.toml  lib.rs
microservices/purpose/: Cargo.toml
microservices/purpose/src/: Cargo.toml  lib.rs
python-bridge/: Cargo.toml  config.yaml  requirements.txt
python-bridge/src/: lib.rs
trebuchet-cli/: Cargo.toml
trebuchet-cli/src/: main.rs
trebuchet-core/: Cargo.toml
trebuchet-core/src/: config.rs  error.rs  lib.rs  models.rs
wasm-frontend/: Cargo.toml  lib.rs  package.json  webpack.config.js
wasm-frontend/js/: index.html  index.js
wasm-frontend/src/: lib.rs
