[package]
name = "trebuchet-core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for the Trebuchet high-performance AI microservices framework"
authors = ["Trebuchet Team"]
license = "MIT"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }

# Local dependencies
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
futures = "0.3"

[dev-dependencies]
mockall = { workspace = true }
criterion = { workspace = true }
tokio-test = "0.4"
tempfile = "3.8"

[[bench]]
name = "core_benchmarks"
harness = false
