[package]
name = "message-bus"
version = "0.1.0"
edition = "2021"
description = "Message bus component for Trebuchet"
authors = ["Kundai Sachikonye"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
trebuchet-core = { path = "../../trebuchet-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true } 