[package]
name = "purpose"
version = "0.1.0"
edition = "2021"
description = "Machine Learning Model Management microservice for Trebuchet"
authors = ["Kundai Sachikonye"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
trebuchet-core = { path = "../../trebuchet-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1.0"
rand = "0.8"
tempfile = "3.2"

[dev-dependencies]
tokio = { workspace = true } 