[package]
name = "gospel"
version = "0.1.0"
edition = "2021"
description = "Genomics analysis microservice for Trebuchet"
authors = ["Kundai Sachikonye"]
license = "MIT"

[dependencies]
trebuchet-core = { path = "../../trebuchet-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
rand = "0.8"

[dev-dependencies]
tokio = { workspace = true }