[package]
name = "$service"
version = "0.1.0"
edition = "2021"
description = "$service microservice for Trebuchet"
authors = ["Kundai Sachikonye"]
license = "MIT"

[dependencies]
trebuchet-core = { path = "../../trebuchet-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }